--- a/example/lib/widgets/template/sidebar.j2.html
+++ b/example/lib/widgets/template/sidebar.j2.html
@@ -10,7 +10,7 @@
           <summary class="flex cursor-pointer list-none items-center justify-between rounded-md px-3 py-2 text-sm hover:bg-primary-50">
             <span class="inline-flex items-center gap-2">
               <i class="fa-solid fa-compass w-5 text-black"></i>
-              <span>Navigation</span>
+              <span>{{ $t('sidebar.navigation') }}</span>
             </span>
             <i class="fas fa-angle-down transition-transform group-open:rotate-180"></i>
           </summary>
@@ -45,7 +45,7 @@
           <summary class="flex cursor-pointer list-none items-center justify-between rounded-md px-3 py-2 text-sm hover:bg-primary-50">
             <span class="inline-flex items-center gap-2">
               <i class="fa-solid fa-globe w-5 text-black"></i>
-              <span>Web Examples</span>
+              <span>{{ $t('sidebar.webExamples') }}</span>
             </span>
             <i class="fas fa-angle-down transition-transform group-open:rotate-180"></i>
           </summary>
@@ -131,7 +131,7 @@
           <summary class="flex cursor-pointer list-none items-center justify-between rounded-md px-3 py-2 text-sm hover:bg-primary-50">
             <span class="inline-flex items-center gap-2">
               <i class="fa-solid fa-database w-5 text-black"></i>
-              <span>Database Examples</span>
+              <span>{{ $t('sidebar.databaseExamples') }}</span>
             </span>
             <i class="fas fa-angle-down transition-transform group-open:rotate-180"></i>
           </summary>
@@ -154,7 +154,7 @@
                 aria-current="page"
               >
                 <i class="fa-solid fa-user-group w-5 text-black"></i>
-                <span>Example Free model DB</span>
+                <span>{{ $t('sidebar.freeModelDbExample') }}</span>
               </a>
             </li>
             {% endif %}
@@ -166,7 +166,7 @@
                 aria-current="page"
               >
                 <i class="fa-solid fa-server w-5 text-black"></i>
-                <span>{{ $t('MySQL Example') }}</span>
+                <span>{{ $t('sidebar.mysqlExample') }}</span>
               </a>
             </li>
             {% endif %}
@@ -181,7 +181,7 @@
           <summary class="flex cursor-pointer list-none items-center justify-between rounded-md px-3 py-2 text-sm hover:bg-primary-50">
             <span class="inline-flex items-center gap-2">
               <i class="fa-solid fa-tools w-5 text-black"></i>
-              <span>Development Tools</span>
+              <span>{{ $t('sidebar.developmentTools') }}</span>
             </span>
             <i class="fas fa-angle-down transition-transform group-open:rotate-180"></i>
           </summary>
@@ -203,7 +203,7 @@
                 aria-current="page"
               >
                 <i class="fa-solid fa-theater-masks w-5 text-black"></i>
-                <span>{{ $t('Htmler example') }}</span>
+                <span>{{ $t('sidebar.htmlerExample') }}</span>
               </a>
             </li>
             <li>
@@ -213,7 +213,7 @@
                 aria-current="page"
               >
                 <i class="fa-solid fa-file-code w-5 text-black"></i>
-                <span>{{ $t('Swagger example') }}</span>
+                <span>{{ $t('sidebar.swaggerExample') }}</span>
               </a>
             </li>
           </ul>
@@ -226,7 +226,7 @@
           <summary class="flex cursor-pointer list-none items-center justify-between rounded-md px-3 py-2 text-sm hover:bg-primary-50">
             <span class="inline-flex items-center gap-2">
               <i class="fa-solid fa-bug w-5 text-black"></i>
-              <span>Debug & Testing</span>
+              <span>{{ $t('sidebar.debugTesting') }}</span>
             </span>
             <i class="fas fa-angle-down transition-transform group-open:rotate-180"></i>
           </summary>
