--- a/example/lib/widgets/template/ui/sorting.j2.html
+++ b/example/lib/widgets/template/ui/sorting.j2.html
@@ -1,6 +1,6 @@
 {% set asc = ((data.order == 'asc') and (data.sort == sortby)) %}
 <a
-    href="{{ $l.updateUrlQuery($rq, {'sort': sortby, 'order': 'desc' if asc else 'asc'}) }}"
+    href="{{ $l.updateUrlQuery( {'sort': sortby, 'order': 'desc' if asc else 'asc'}) }}"
     class="wave inline-flex items-center gap-1 font-medium rounded text-slate-600 hover:text-slate-900 focus:outline-none no-underline group"
     title="{{ $t(title) }}"
 >
